force-app/main/default/objects/Product2/fields/Is_Top_Seller__c.field-meta.xml
<CustomField>
    <fullName>Is_Top_Seller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this product is currently flagged as a top seller based on recent sales performance. Updated automatically by the TopSellerBatch job.</description>
    <inlineHelpText>Top selling products are highlighted in the product catalog and given priority placement in search results.</inlineHelpText>
    <label>Is Top Seller</label>
    <type>Checkbox</type>
</CustomField>